[package]
name = "LeetCode_Solution"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]

members = [
    "spiral-matrix", #54
    "contains-duplicate",   #217
    "find-the-duplicate-number",    #287
    "find-all-duplicates-in-an-array",    #442
    
    ]
