[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[lib]
doctest = false
test = true

[[bin]]
name = "lca_deepest_leaves"
path = "src/tree/25-Apr4.rs"

[[bin]]
name = "subset_xor_sum"
path = "src/bit_manipulation/25-Apr5.rs"
